refactored, added custom exceptions